--- a/course-db/modules.yaml
+++ b/course-db/modules.yaml
@@ -685,3 +685,188 @@ Modules:
   level: 2
   name: Templating
   topic: Helm
+- description: ''
+  id: 131
+  level: 3.99
+  name: Multicluster
+  topic: Istio
+- description: ''
+  id: 132
+  level: 2.99
+  name: Policy
+  topic: Istio
+- description: ''
+  id: 133
+  level: 1
+  name: Architecture
+  topic: Istio
+- description: ''
+  id: 134
+  level: 1.25
+  name: Control Plane
+  topic: Istio
+- description: ''
+  id: 135
+  level: 1.5
+  name: Envoy
+  topic: Istio
+- description: ''
+  id: 136
+  level: 2
+  name: Basic Traffic Management
+  topic: Istio
+- description: ''
+  id: 137
+  level: 2.5
+  name: Ingress
+  topic: Istio
+- description: ''
+  id: 138
+  level: 3
+  name: Advanced Traffic Management
+  topic: Istio
+- description: ''
+  id: 139
+  level: 2.25
+  name: Ownership & Borrowing
+  topic: Rust
+- description: ''
+  id: 140
+  level: 3.9
+  name: Testing
+  topic: Rust
+- description: ''
+  id: 141
+  level: 1.99
+  name: Functions
+  topic: Rust
+- description: ''
+  id: 142
+  level: 1
+  name: Overview
+  topic: Rust
+- description: ''
+  id: 143
+  level: 2.99
+  name: Packages
+  topic: Rust
+- description: ''
+  id: 144
+  level: 3
+  name: Errors
+  topic: Rust
+- description: ''
+  id: 145
+  level: 1.25
+  name: Data Types & Flow Control
+  topic: Rust
+- description: ''
+  id: 146
+  level: 2
+  name: Methods & Traits
+  topic: Rust
+- description: ''
+  id: 147
+  level: 3.5
+  name: Concurrency
+  topic: Rust
+- description: ''
+  id: 148
+  level: 1.5
+  name: Collections
+  topic: Rust
+- description: ''
+  id: 149
+  level: 1.75
+  name: Structures, Enumerations, & Pattern Matching
+  topic: Rust
+- description: ''
+  id: 150
+  level: 2.75
+  name: Generics
+  topic: Rust
+- description: ''
+  id: 151
+  level: 3.25
+  name: Smart Pointers
+  topic: Rust
+- description: ''
+  id: 152
+  level: 3.99
+  name: Next Steps
+  topic: Rust
+- description: ''
+  id: 153
+  level: 2.99
+  name: Cost Management
+  topic: Spark
+- description: ''
+  id: 154
+  level: 2
+  name: Kubernetes in the Cloud
+  topic: Spark
+- description: ''
+  id: 155r
+  level: 2.5
+  name: Airflow in Kubernetes
+  topic: Spark
+- description: ''
+  id: 156
+  level: 1
+  name: Spark Overview
+  topic: Spark
+- description: ''
+  id: 157
+  level: 1.99
+  name: Observability & Scaling
+  topic: Spark
+- description: ''
+  id: 158
+  level: 1.75
+  name: Spark on Kubernetes
+  topic: Spark
+- description: ''
+  id: 159
+  level: 2.25
+  name: Airflow Overview
+  topic: Spark
+- description: ''
+  id: 160
+  level: 1
+  name: Overview
+  topic: Linux
+- description: ''
+  id: 161
+  level: 1.25
+  name: Filesystem
+  topic: Linux
+- description: ''
+  id: 162
+  level: 1.5
+  name: Editing Files
+  topic: Linux
+- description: ''
+  id: 163
+  level: 1.99
+  name: Shell Operations
+  topic: Linux
+- description: ''
+  id: 164
+  level: 2
+  name: File Processing
+  topic: Linux
+- description: ''
+  id: 165
+  level: 2.5
+  name: Text Processing
+  topic: Linux
+- description: ''
+  id: 166
+  level: 2.75
+  name: Processes & Job Control
+  topic: Linux
+- description: ''
+  id: 167
+  level: 2.99
+  name: Cgroups & Namespaces
+  topic: Linux
