--- a/course-db/modules.yaml
+++ b/course-db/modules.yaml
@@ -164,6 +164,16 @@ Modules:
   level: 1.0
   name: Containers & Orchestration
   topic: Kubernetes
+- description: ''
+  id: 236
+  level: 1.0
+  name: Observability
+  topic: Microservices
+- description: ''
+  id: 237
+  level: 1.0
+  name: Cloud Native Systems Overview
+  topic: Microservices
 - description: Introduction to containers and containerized applications using Docker
   id: 9
   level: 1.1
@@ -200,6 +210,16 @@ Modules:
   level: 1.1
   name: Image Introduction
   topic: Containers
+- description: ''
+  id: 225
+  level: 1.1
+  name: Logs and log management
+  topic: Microservices
+- description: ''
+  id: 231
+  level: 1.1
+  name: Microservice Communications I - REST
+  topic: Microservices
 - description: Understand the basic data types of the Go language.
   id: 53
   level: 1.2
@@ -267,6 +287,16 @@ Modules:
   name: Controlling Containers
   topic: Containers
 - description: ''
+  id: 233
+  level: 1.2
+  name: Microservice Communications II - RPC
+  topic: Microservices
+- description: ''
+  id: 238
+  level: 1.2
+  name: Cloud Native Communications Patterns
+  topic: Microservices
+- description: ''
   id: 134
   level: 1.25
   name: Control Plane
@@ -311,6 +341,16 @@ Modules:
   level: 1.3
   name: Image Registries
   topic: Containers
+- description: ''
+  id: 232
+  level: 1.3
+  name: Container Packaging
+  topic: Microservices
+- description: ''
+  id: 239
+  level: 1.3
+  name: Connectivity And Composition Patterns
+  topic: Microservices
 - description: Understand the error package and using errors in your Go code.
   id: 56
   level: 1.4
@@ -331,6 +371,16 @@ Modules:
   level: 1.4
   name: Container Volumes
   topic: Containers
+- description: ''
+  id: 234
+  level: 1.4
+  name: Microservice Communication III - Messaging
+  topic: Microservices
+- description: ''
+  id: 240
+  level: 1.4
+  name: Data Management Patterns
+  topic: Microservices
 - description: OCI / Docker images including registries and image creation with Dockerfiles
   id: 8
   level: 1.5
@@ -376,12 +426,32 @@ Modules:
   level: 1.5
   name: Container Networking
   topic: Containers
+- description: ''
+  id: 226
+  level: 1.5
+  name: Metrics and Autoscaling
+  topic: Microservices
+- description: ''
+  id: 241
+  level: 1.5
+  name: Event-driven Architecture Patterns
+  topic: Microservices
 - description: Examination of container images, image metadata, and pushing images
     to private registries
   id: 88
   level: 1.6
   name: Images and Registries
   topic: Containers
+- description: ''
+  id: 227
+  level: 1.6
+  name: Service Mesh and Tracing
+  topic: Microservices
+- description: ''
+  id: 235
+  level: 1.6
+  name: Cloud Native Transactions And Event Sourcing
+  topic: Microservices
 - description: ''
   id: 170
   level: 1.7
@@ -512,6 +582,16 @@ Modules:
   level: 2.0
   name: Streams
   topic: Kafka
+- description: ''
+  id: 228
+  level: 2.0
+  name: Advanced Deployment Models
+  topic: Microservices
+- description: ''
+  id: 242
+  level: 2.0
+  name: Aggregates
+  topic: Microservices
 - description: Examination of Kubernetes control plane components, etcd, HA models,
     and worker Node agents
   id: 4
@@ -559,6 +639,16 @@ Modules:
   level: 2.1
   name: Schema Registry
   topic: Kafka
+- description: ''
+  id: 229
+  level: 2.1
+  name: GitOps
+  topic: Microservices
+- description: ''
+  id: 243
+  level: 2.1
+  name: Operational Patterns
+  topic: Microservices
 - description: Explorer using and managing channel objects.
   id: 50
   level: 2.2
@@ -579,6 +669,11 @@ Modules:
   level: 2.2
   name: Security
   topic: Kafka
+- description: ''
+  id: 244
+  level: 2.2
+  name: Migration Patterns
+  topic: Microservices
 - description: ''
   id: 139
   level: 2.25
@@ -721,6 +816,11 @@ Modules:
   level: 2.9
   name: Dashboard
   topic: Kubernetes
+- description: ''
+  id: 230
+  level: 2.9
+  name: Software Supply Chain Security
+  topic: Microservices
 - description: Templating for Kubernetes application manifests using the kustomize
     command line utility
   id: 17
@@ -844,7 +944,7 @@ Modules:
 - description: ''
   id: 223
   level: 3.14
-  name: CKS Drills PArt 4
+  name: CKS Drills Part 4
   topic: Kubernetes
 - description: 'Kubernetes day 2 operations covered: version upgrades and adding infrastructure
     nodes'
@@ -1058,12 +1158,6 @@ Modules:
   level: 4.3
   name: Ingress Load Balancing
   topic: Kubernetes
-- description: 'Best practices for container images including: scanning, image signing,
-    and binary authorization'
-  id: 43
-  level: 4.3
-  name: Image Security
-  topic: Containers
 - description: Kubernetes block storage volumes and block storage CSI features
   id: 6
   level: 4.4
@@ -1120,4 +1214,3 @@ Modules:
   level: 4.99
   name: Troubleshooting
   topic: Kubernetes
-
